--- a/LetsEat/Restaurant Details/RestaurantDetails.storyboard
+++ b/LetsEat/Restaurant Details/RestaurantDetails.storyboard
@@ -168,23 +168,24 @@
                                                     <color key="textColor" name="LetsEat Dark Gray"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0star" translatesAutoresizingMaskIntoConstraints="NO" id="zyf-WR-f7s">
-                                                    <rect key="frame" x="135" y="34" width="205" height="34"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sCj-AR-WsV" customClass="RatingView" customModule="LetsEat" customModuleProvider="target">
+                                                    <rect key="frame" x="129" y="50" width="205" height="34"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="34" id="762-8X-h2s"/>
-                                                        <constraint firstAttribute="width" constant="205" id="V7J-E6-MSH"/>
+                                                        <constraint firstAttribute="height" constant="34" id="Gie-b2-6yi"/>
+                                                        <constraint firstAttribute="width" constant="205" id="xoM-Wp-LLX"/>
                                                     </constraints>
-                                                </imageView>
+                                                </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="dZA-Eb-qil" firstAttribute="leading" secondItem="e5z-LD-19B" secondAttribute="leadingMargin" constant="27" id="AcJ-y0-ZXW"/>
                                                 <constraint firstItem="Q3J-sO-OOb" firstAttribute="leading" secondItem="e5z-LD-19B" secondAttribute="leadingMargin" constant="16" id="Ott-se-bWb"/>
-                                                <constraint firstItem="zyf-WR-f7s" firstAttribute="top" secondItem="e5z-LD-19B" secondAttribute="topMargin" constant="23" id="S2P-Mn-oK9"/>
+                                                <constraint firstItem="sCj-AR-WsV" firstAttribute="top" secondItem="Ddz-2f-bvQ" secondAttribute="bottom" constant="13" id="ZGm-0c-gwN"/>
                                                 <constraint firstItem="Q3J-sO-OOb" firstAttribute="top" secondItem="Ddz-2f-bvQ" secondAttribute="bottom" constant="5" id="cnh-RI-Nio"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="zyf-WR-f7s" secondAttribute="trailing" constant="19" id="dRQ-7g-YM6"/>
                                                 <constraint firstItem="Ddz-2f-bvQ" firstAttribute="leading" secondItem="e5z-LD-19B" secondAttribute="leading" constant="16" id="f0d-5b-WIG"/>
                                                 <constraint firstAttribute="trailing" secondItem="Ddz-2f-bvQ" secondAttribute="trailing" constant="16" id="lAt-7w-g5d"/>
                                                 <constraint firstItem="Ddz-2f-bvQ" firstAttribute="top" secondItem="e5z-LD-19B" secondAttribute="top" constant="5" id="u6X-nF-KyT"/>
+                                                <constraint firstItem="sCj-AR-WsV" firstAttribute="leading" secondItem="Q3J-sO-OOb" secondAttribute="trailing" id="xNo-Tq-4rY"/>
                                                 <constraint firstItem="dZA-Eb-qil" firstAttribute="top" secondItem="Ddz-2f-bvQ" secondAttribute="bottom" constant="66" id="zxs-eO-yad"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -235,16 +236,10 @@
                                                                 <constraint firstAttribute="height" constant="62" id="vQZ-33-cOM"/>
                                                             </constraints>
                                                         </view>
-                                                        <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a3t-Rt-V5M">
-                                                            <rect key="frame" x="0.0" y="-20" width="375" height="214"/>
-                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                            <connections>
-                                                                <segue destination="8h3-is-Atb" kind="embed" id="TX9-2n-dQ0"/>
-                                                            </connections>
-                                                        </containerView>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
+                                                        <constraint firstItem="XeD-b7-d0O" firstAttribute="top" secondItem="KjP-BH-BGm" secondAttribute="top" constant="4" id="9VX-tu-My5"/>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="187" id="E2x-Ne-zsx"/>
                                                         <constraint firstItem="XeD-b7-d0O" firstAttribute="centerX" secondItem="KjP-BH-BGm" secondAttribute="centerX" id="K2K-d8-SZP"/>
                                                         <constraint firstAttribute="width" constant="187" id="OpP-5Z-qla"/>
@@ -443,6 +438,7 @@
                         <outlet property="lblName" destination="led-9y-dFe" id="rnX-4S-8lc"/>
                         <outlet property="lblOverallRating" destination="Q3J-sO-OOb" id="u5N-HW-Xns"/>
                         <outlet property="lblTableDetails" destination="F9o-Yv-vtF" id="jul-LV-8ny"/>
+                        <outlet property="ratingView" destination="sCj-AR-WsV" id="VIL-0W-uxt"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ivb-W5-hgB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -497,7 +493,7 @@
             <objects>
                 <viewController id="8h3-is-Atb" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0jf-Hv-FAl">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="214"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LJZ-nL-Ekh">
@@ -548,7 +544,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="0star" width="226" height="38"/>
         <image name="detail-logo" width="220" height="112"/>
         <image name="heart-unselected" width="44" height="44"/>
         <image name="icon-calendar" width="16" height="16"/>
